[package]
name = "zirv-db-sqlx"
version = "0.1.0"
edition = "2024"
description = "A convinient wrapper around sqlx."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Glubiz/zirv-db-sqlx"
documentation = "https://docs.rs/zirv-db-sqlx"
keywords = ["rust", "programming"]
categories = ["development-tools"]

[dependencies]
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
zirv-config = "0.1.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }